work on node 16.2.0

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_pack_tag 'application',
                                'data-turbolinks-track': 'reload' %>
     <%= render 'layouts/shim' %>
+    <%= javascript_pack_tag "application" %>
   </head>
   <body>
     <%= render 'layouts/header' %>
